--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,6 +19,14 @@
         <input type="color" id="colorPicker" style="display: none;">
         <label for="lightSlider" style="display: none;">Intensité de la lumière:</label>
         <input type="range" id="lightSlider" min="0" max="2" step="0.1" value="1" style="display: none;">
+
+        <!-- Ajout des curseurs pour ajuster les dimensions des carreaux -->
+        <label for="tileWidth">Largeur des carreaux:</label>
+        <input type="range" id="tileWidth" min="1" max="10" step="0.1" value="5">
+
+        <label for="tileHeight">Hauteur des carreaux:</label>
+        <input type="range" id="tileHeight" min="1" max="10" step="0.1" value="5">
+
         <button id="moveForward">Avancer</button>
         <button id="moveBackward">Reculer</button>
     </div>
