--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
         <label for="lightSlider" style="display: none;">Intensité de la lumière:</label>
         <input type="range" id="lightSlider" min="0" max="2" step="0.1" value="1" style="display: none;">
 
-        <!-- Ajout des curseurs pour ajuster les dimensions des carreaux -->
+        <!-- Ajout des affichages en cm pour les dimensions des carreaux -->
         <label for="tileWidth">Largeur des carreaux:</label>
+        <span id="tileWidthValue">50 </span> <!-- Largeur en cm -->
         <input type="range" id="tileWidth" min="1" max="10" step="0.1" value="5">
 
         <label for="tileHeight">Hauteur des carreaux:</label>
+        <span id="tileHeightValue">50 </span> <!-- Hauteur en cm -->
         <input type="range" id="tileHeight" min="1" max="10" step="0.1" value="5">
 
         <button id="moveForward">Avancer</button>
