--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scène 3D Interactif</title>
     <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon">
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -39,6 +40,37 @@
         <button id="undo">Défaire</button>
 
     </div>
+
+
+
+
+
+<script>
+
+
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js').then((registration) => {
+            console.log('ServiceWorker enregistré avec succès : ', registration);
+          }, (err) => {
+            console.log('Échec de l\'enregistrement du ServiceWorker : ', err);
+          });
+        });
+      }
+      
+
+
+
+
+
+
+
+</script>
+
+
+
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
