--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="textureOptions" style="display: none;">
             <button id="choosePaint" class="secondary">Peinture</button>
             <button id="chooseTile" class="secondary">Carrelage</button>
-            <button id="normalTilePose" disabled>Pose Normale DDDD</button>
+            <button id="normalTilePose" disabled>Pose Normale</button>
             <button id="offsetTilePose" disabled>Pose Décalée</button>
         </div>
 
