--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="controls">
         <!-- Apply Texture Button -->
-        <button id="applyTexture">Appliquer Texture</button>
+        <button id="applyTexture">Appliquer TextureVVVV</button>
 
         <!-- Texture options -->
         <div id="textureOptions" style="display: none;">
